# pylips

./: .gitignore  pyproject.toml
src/pylips/: __main__.py  pylips.py
