[project]
name="pylips"
authors=[{name="Joshua Molloy", email="None"}]
readme="README.md"
license="LICENSE"
version="1.3.2"
requires-python=">=3.8"
dependencies=[
"pycryptodome>=3.9.4",
"requests>=2.20.0",
"paho-mqtt>=1.4.0",
    "click"
]

[project.optional-dependencies]
dev=["ipython", "black[d]", "pipreqs"]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"